[package]
name = "rest_examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "error_custom_thiserror"

[[example]]
name = "error_handling_with_closure"

[[example]]
name = "error_panic"

[[example]]
name = "error_string"

[[example]]
name = "traits"

[[example]]
name = "unwrap_with_none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
rand = "0.8.5"
thiserror = "1.0.48"
