[package]
name = "rest_examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "async_simple"

[[example]]
name = "async_with_return_value"

[[example]]
name = "box_place_on_heap"

[[example]]
name = "box_recursive_type"

[[example]]
name = "channel_simple"

[[example]]
name = "channel_handling_multiple_messages"

[[example]]
name = "channel_high_throughput"

[[example]]
name = "error_custom_thiserror"

[[example]]
name = "error_handling_with_closure"

[[example]]
name = "error_panic"

[[example]]
name = "let_some_with_else"

[[example]]
name = "macro_simple"

[[example]]
name = "println"

[[example]]
name = "random_number"

[[example]]
name = "rayon_simple"

[[example]]
name = "thread_multiple"

[[example]]
name = "thread_ownership"

[[example]]
name = "thread_reference_counter"

[[example]]
name = "thread_shared_data"

[[example]]
name = "thread_simple"

[[example]]
name = "traits"

[[example]]
name = "unwrap_with_none"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
exitcode = "1.1.2"
num = "0.4.1"
rand = "0.8.5"
rayon = "1.7.0"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
